--- a/app/src/main/res/layout/activity_adsphone.xml
+++ b/app/src/main/res/layout/activity_adsphone.xml
@@ -15,15 +15,17 @@
         android:ems="10"
         android:layout_marginTop="100dp"
         android:inputType="textPersonName"
-        android:hint="Enter the contract number" />
+        android:hint="Enter the Phone Number" />
 
     <Button
         android:id="@+id/goEdit"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
         android:text="Edit Now"
-        android:textSize="25dp"/>
+        android:textSize="20dp"
+        style="@style/Base.Widget.AppCompat.Button.Colored"/>
+
 </LinearLayout>
