--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/grid"
     tools:context=".Login">
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:drawableLeft="@drawable/ic_person_black_24dp"
-        android:hint="Enter Email Address" />
+        android:hint="Enter Email Address"
+        android:textColor="@color/Black"/>
 
     </android.support.design.widget.TextInputLayout>
 
@@ -50,6 +51,7 @@
         android:layout_below="@+id/name"
         android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
         android:hint="Enter Password"
+        android:textColor="@color/Black"
         android:inputType="textPassword"/>
 
 </android.support.design.widget.TextInputLayout>
@@ -67,7 +69,7 @@
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
-         android:text="Available all adds"
+         android:text="Available all ads"
          android:layout_marginBottom="30dp"
          android:textSize="22sp"/>
 
@@ -77,11 +79,11 @@
         android:layout_height="50dp"
         android:layout_below="@+id/availableadds_buttonID"
         android:gravity="center"
-        android:text="Created New Id"
+        android:text="CREATED NEW ID"
         android:textSize="22dp"
-        android:textColor="@color/background_color"
+        android:textColor="@color/Black"
         android:layout_marginTop="-30dp"
-        />
+        android:textStyle=""/>
 
     <ProgressBar
         android:id="@+id/progressbarId"
