--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="141dp"
         android:gravity="center"
         android:paddingLeft="60dp"
-        android:text="RentHome"
+        android:text="HouseRent"
         android:textSize="50dp"/>
 
     <ImageView
