--- a/app/src/main/res/layout/sample_layout.xml
+++ b/app/src/main/res/layout/sample_layout.xml
@@ -23,7 +23,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Phoneno : "
+        android:text="Phone Number: "
         android:id="@+id/textViewphonenoId"
         android:layout_marginTop="5dp"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
@@ -49,12 +49,7 @@
         android:id="@+id/textViewdescriptionId"
         android:layout_marginTop="5dp"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
-    <Button
-        android:id="@+id/phoneCallButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/caller_image"/>
+
 
 
 </LinearLayout>
