--- a/app/src/main/res/layout/activity_adsphone.xml
+++ b/app/src/main/res/layout/activity_adsphone.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:layout_marginTop="100dp"
-        android:inputType="textPersonName"
+        android:inputType="phone"
+        android:maxLength="11"
         android:hint="Enter the Phone Number" />
 
     <Button
